# Plangothic_Project

./: .gitattributes  README.en.md  README.ja.md  README.md  README.zh.hant.md
.github/ISSUE_TEMPLATE/: 01-字形问题报告---font-glyphs-problem-report.yaml  02-其他问题报告---other-problematic-report.yaml  其他问题报告---other-problematic-report.md  字形问题报告---font-glyphs-problem-report.md
.github/workflows/: build-fonts.yml  deploy-build-fonts.yml  release-packaging.yml
build-info/: build-info.json  manifest.md
fonts/: README.md
registry/Experimental/: LanguagePack-Install.reg  LanguagePack-Uninstall.reg  README.md  font_link_manager.py  main.py  main_conservative.py  reg_multi_sz_converter.py
registry/Experimental/font-fallback-test/: CMakeLists.txt  Cargo.toml  config.ini  config.toml  main.cpp  resource.rc
registry/Experimental/font-fallback-test/src/: build.rs  main.rs
registry/Experimental/fontlink/: custom_font_example.py
sources/: build.py  readme.md
tools/: convert_font.py  optimize_glyph.py
tools/old/: optimize_glyph.old.py
